[tool.poetry]
name = "postgresql-homeworks"
version = "0.1.0"
description = ""
authors = ["Asanov Arlen"]
readme = "README.md"
packages = [{include = "postgresql_homeworks"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
